--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "ejs": "~2.3.3",
     "express": "~4.13.3",
+	"client-sessions": "~0.7.0",
 	"mongodb": "~2.0",
 	"mqtt": "~1.4.0",
 	"infinite-loop": "~0.2.2",
