--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
   "name": "AquaFeed",
   "description": "AF with OpenShift",
-  "main": "server.js",
-  "scripts": {
-    "start": "supervisor server.js"
+  "author": {
+    "name": "EqualString",
+    "email": "alen.egredzija@gmail.com"
   },
+  "engines": {
+    "node": ">= 0.6.0",
+    "npm": ">= 1.0.0"
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "main": "server.js",
   "dependencies": {
     "express": "~4.13.3",
 	"client-sessions": "~0.7.0",
 	"body-parser": "~1.15.0",
 	"ejs": "~2.3.3",
-	"mysql": "~0.9",
+	"mysql": "~2.10.2",
 	"mqtt": "~1.4.0",
 	"infinite-loop": "~0.2.2",
 	"sendgrid": "^1.9.2",
