--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
 	"body-parser": "~1.15.0",
 	"ejs": "~2.3.3",
 	"mysql": "~2.10.2",
-	"mqtt": "~1.4.0",
-	"infinite-loop": "~0.2.2",
 	"sendgrid": "^1.9.2",
+	"request": "~2.72.0",
+	"simple-encryptor": "~1.1.0",
 	"socket.io": "~1.3.6"
   }
 }
