--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 	"mysql": "~2.10.2",
 	"sendgrid": "^1.9.2",
 	"request": "~2.72.0",
-	"simple-encryptor": "~1.1.0",
+	"just.randomstring": "~0.1.1",
 	"socket.io": "~1.3.6"
   }
 }
